[tool.poetry]
name = "Claset"
version = "0.1.0"
description = "基于 Python 的 Minecraft 启动管理器"
authors = ["Puqns67 <me@puqns67.icu>"]
license = "GPL-3.0-or-later"
packages = [
    { include = "Claset" }
]
exclude = ["Claset/Cache/*", "Claset/Logs/*", "Claset/Utils/JavaHelper/JavaSrcs/*"]

[tool.poetry.dependencies]
python = "^3.10.0"
requests = "^2.27.1"
cmd2 = "^2.4.1"
rich = "^12.4.4"
zstandard = "^0.17.0"
PySocks = "^1.7.1"

[tool.poetry.dev-dependencies]
Nuitka = "^0.9"
black = "^22.3.0"

[[tool.poetry.source]]
name = "bfsu"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

