[tool.poetry]
name = "Claset-Core"
version = "0.1.0"
description = "基于 Python 的 Minecraft 启动管理器核心"
authors = ["Puqns67 <me@puqns67.icu>"]
license = "GPL-3.0-or-later"
packages = [
    { include = "Claset" }
]
exclude = ["Claset/Cache/*", "Claset/Logs/*", "Claset/Utils/JavaHelper/JavaSrcs/*"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
zstandard = "^0.17.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[tool.black]
line-length = 95
target-version = ['py310']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

