[project]
name = "Claset-Core"
description = "基于 Python 的 Minecraft 启动管理器核心"
authors = [
    {name = "Puqns67", email = "me@puqns67.icu"},
]
dependencies = ["requests<2.29.0,>=2.25.0", "zstandard<0.19.0,>=0.17.0"]
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
dynamic = ["version"]

[project.optional-dependencies]

[tool.pdm]
version = { source = "file", path = "Claset/__init__.py" }

[tool.pdm.dev-dependencies]
formatter = [
    "black>=22.8.0",
]

[tool.black]
line-length = 95
target-version = ["py310"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
